# ciciERP

./: -X  .gitignore  ARCHITECTURE.md  ARCHITECTURE_REVIEW.md  CLAUDE.md  Cargo.toml  PRODUCT_SPEC.md  README.md  TEST_REPORT.md  import_report.md
.github/: copilot-instructions.md
.playwright-mcp/: bug-登记表---工作表1.csv  page-2026-04-02T10-51-05-777Z.yml  page-2026-04-02T10-51-47-796Z.yml  page-2026-04-02T10-52-33-465Z.yml  page-2026-04-02T10-52-41-721Z.yml  page-2026-04-02T10-53-21-264Z.yml  page-2026-04-02T14-47-16-360Z.yml  page-2026-04-02T15-54-44-085Z.yml  page-2026-04-02T15-58-16-379Z.yml  page-2026-04-02T15-58-29-800Z.yml  page-2026-04-02T15-58-50-137Z.yml  page-2026-04-02T15-59-12-402Z.yml  page-2026-04-02T16-01-19-606Z.yml  page-2026-04-02T16-01-27-966Z.yml  page-2026-04-02T16-02-49-404Z.yml  page-2026-04-02T16-10-50-235Z.yml  page-2026-04-02T23-06-20-460Z.yml  page-2026-04-03T00-56-07-467Z.yml  page-2026-04-03T09-08-33-164Z.yml  page-2026-04-03T09-09-45-857Z.yml  page-2026-04-03T09-09-51-795Z.yml  page-2026-04-03T09-10-30-921Z.yml  page-2026-04-03T09-10-41-240Z.yml  page-2026-04-03T09-11-32-599Z.yml  page-2026-04-03T09-12-18-760Z.yml  page-2026-04-04T03-01-29-914Z.yml  page-2026-04-04T03-40-07-817Z.yml  page-2026-04-04T04-15-39-697Z.yml  page-2026-04-04T08-00-15-771Z.yml  page-2026-04-04T08-00-23-846Z.yml  page-2026-04-04T08-01-18-871Z.yml  page-2026-04-04T08-04-35-637Z.yml  page-2026-04-04T08-09-57-800Z.yml  page-2026-04-04T08-20-33-426Z.yml  page-2026-04-04T08-22-14-883Z.yml  page-2026-04-04T08-22-38-989Z.yml  page-2026-04-04T08-38-16-759Z.yml  page-2026-04-04T08-38-25-698Z.yml  page-2026-04-04T08-39-04-256Z.yml  page-2026-04-04T08-39-13-896Z.yml  (+24 more)
config/: default.toml
crates/api/: Cargo.toml
crates/api/src/: main.rs  openapi_simple.rs  state.rs
crates/api/src/middleware/: auth.rs  integration_auth.rs  mod.rs
crates/api/src/routes/: auth.rs  brands.rs  categories.rs  commercial_invoices.rs  customers.rs  exchange_rates.rs  health.rs  integration.rs  inventory.rs  logistics.rs  mod.rs  orders.rs  product_content.rs  product_costs.rs  product_prices.rs  products.rs  products.rs.backup  proforma_invoices.rs  purchases.rs  suppliers.rs  users.rs  web.rs  web_invoice.rs
crates/api/src/services/: mod.rs  webhook_service.rs
crates/api/src/templates/: auth.rs  base.rs  customers.rs  dashboard.rs  inventory.rs  invoice.rs  logistics.rs  mod.rs  orders.rs  products.rs  purchases.rs  suppliers.rs
crates/api/src/utils/: currency.rs
crates/api/templates/: customers.html  dashboard.html  empty_layout.html  inventory.html  layout.html  login.html  orders.html  orders.html.backup  products.html  suppliers.html
crates/db/: Cargo.toml
crates/db/migrations/: 002_product_costs_content.sql  003_product_price_refactor.sql  004_customer_notes.sql  005_purchase_multi_supplier.sql  006_exchange_rates.sql  007_integration_api.sql  008_pi_ci_flow.sql  009_order_terms.sql  010_product_model.sql  011_followup_profit_logs.sql
crates/db/src/: lib.rs  pool.rs
crates/db/src/queries/: api_clients.rs  brands.rs  categories.rs  commercial_invoices.rs  customers.rs  exchange_rates.rs  inventory.rs  logistics.rs  mod.rs  operation_logs.rs  orders.rs  product_content.rs  product_costs.rs  product_prices.rs  products.rs  proforma_invoices.rs  purchases.rs  suppliers.rs  users.rs  webhooks.rs
crates/models/: Cargo.toml
crates/models/src/: api_client.rs  auth.rs  commercial_invoice.rs  common.rs  customer.rs  exchange_rate.rs  inventory.rs  lib.rs  logistics.rs  order.rs  product.rs  proforma_invoice.rs  purchase.rs  supplier.rs  user.rs  webhook.rs
crates/utils/: Cargo.toml
crates/utils/src/: error.rs  lib.rs  response.rs
data/: cicierp.db  cicierp.db-shm  cicierp.db-wal  cicierp_backup_20260402_065212.db
docs/: ANALYSIS_REPORT.md  API.md  BUG_TRACKER.md  CHATGPT_SUGGESTIONS_EVALUATION.md  CODER_FIX_REVIEW.md  CODE_REVIEW.md  CURRENCY_AND_ANALYTICS_PLAN.md  DATA_MODELS.md  DATA_VERIFICATION_REPORT.md  DESIGN_PLAN.md  FEATURE_LIST.md  ORDERS_AE_IMPORT_ANALYSIS.md  ORDERS_AE_IMPORT_VERIFICATION.md  ORDERS_IMPORT_ASSESSMENT.md  ORDER_MODULE_REQUIREMENTS.md  PRODUCT_LIST_test_report.md  PRODUCT_PRICE_FIX_REVIEW.md  REPLY_TO_CHATGPT_SUGGESTIONS.md  UI_COMPARISON.md  customer_list.md  product_cost_list.md
migrations/: 001_init.sql
scripts/: check_page.js  create_default_api_client.sh  create_default_api_client.sql  fix_product_data.py  gen_api_docs.sh  import_customers.py  update_sheet.js  (+5 more)
(+26 files in other folders)
