[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["ciciERP Team"]
license = "MIT"

[workspace.dependencies]
# Web 框架
axum = { version = "0.7", features = ["macros", "multipart"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }
hyper = { version = "1.0", features = ["full"] }

# 数据库
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "chrono", "uuid"] }

# 异步运行时
tokio = { version = "1.35", features = ["full"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 配置
config = "0.14"
dotenvy = "0.15"

# 验证
validator = { version = "0.16", features = ["derive"] }

# 密码哈希
argon2 = "0.5"
password-hash = "0.5"

# JWT
jsonwebtoken = "9.2"

# 模板引擎
askama = "0.12"

# 随机数
rand = "0.8"

# CSV 导出
csv = "1.3"

# MD5 哈希（用于迁移校验）
md-5 = "0.10"

# HMAC 和 SHA256（用于签名）
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# HTTP 客户端
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# Futures
futures = "0.3"

# 内部 crates
cicierp-db = { path = "crates/db" }
cicierp-models = { path = "crates/models" }
cicierp-utils = { path = "crates/utils" }

# OpenAPI 文档生成
utoipa = "4.2"
utoipa-swagger-ui = { version = "4.0", features = ["axum"] }
