[package]
name = "cicierp-utils"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true }
validator = { workspace = true }
sqlx = { workspace = true }
anyhow = { workspace = true }
